project1/modules/sg/main.tf
resource "aws_security_group" "lb-sg" {
  name        = "allow_lb"
  description = "Allow lb inbound traffic"
  vpc_id      = var.vpc_main_id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "TCP"
    cidr_blocks = ["0.0.0.0/0"]
  }  
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
  
}


resource "aws_security_group" "allow_ssh" {
  name        = "allow_ssh"
  description = "Allow SSH inbound traffic"
  vpc_id      = var.vpc_main_id

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }  
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}   


output "80-sg" {  
  value = aws_security_group.lb-sg.id 
}
output "22-sg" {  
  value = aws_security_group.allow_ssh.id 
}
